--- a/ComposeVisualTransformation/build.gradle
+++ b/ComposeVisualTransformation/build.gradle
@@ -42,9 +42,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
+
+    /** test **/
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation "com.google.truth:truth:1.1.3"
 }
 
 group='com.github.Jayze24'
